# advent-of-code-2022

./: Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5rb11cz8xmv8cdk7b0w80pzczbzk0p26-source  67kya51j0k9xz5ssnxc19jd2x9igzcyg-source  y0if268cc0rdcyyf2hgiv1wgnjvj4hfd-source
src/day_10/: day_10.rs
src/day_3/: day_3.rs
