[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day_1"
path = "src/day_1/day_1.rs"

[[bin]]
name = "day_2"
path = "src/day_2/day_2.rs"

[[bin]]
name = "day_3"
path = "src/day_3/day_3.rs"

[[bin]]
name = "day_4"
path = "src/day_4/day_4.rs"

[[bin]]
name = "day_5"
path = "src/day_5/day_5.rs"

[[bin]]
name = "day_6"
path = "src/day_6/day_6.rs"

[[bin]]
name = "day_7"
path = "src/day_7/day_7.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
itertools = "0.11.0"
